@@ -1,4 +1,5 @@
 Version 2.6.3: ??/??/??
+	* Add support for Spidernet to IRC Helper plugin.
 
 Version 2.6.2: 01/01/10
 	* Fix IRC More plugin not properly rejoining channels.
